[SAM-6199] Update agency picker to use orgId in ngOnChanges

--- a/src/app/assistance-listing/assistance-listing-operations/sections/header-information/header-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/header-information/header-information.template.html
@@ -17,6 +17,7 @@
                 [multimode]="false"
                 [advancedMode]="false"
                 [required]="true"
+                [orgId]="agency"
                 [initial]="agency ? [agency] : []"
                 (organization)="onOrganizationChange($event)"
                 [levelLimit] = '2'>
