message is required if use came from request page, cancel should return to rm page if the user came from there

--- a/src/app/users/public/grant-access/grant-access.template.html
+++ b/src/app/users/public/grant-access/grant-access.template.html
@@ -75,12 +75,12 @@
   </ng-container>
 
   <!-- Optional Message -->
-  <samTextArea name="options-response" label="Messages:" [hint]="messagePlaceholder()" [(ngModel)]="messages" [required]="mode === 'request'" [errorMessage]="errors.messages" (valueChange)="onMessageChange($event)"></samTextArea>
+  <samTextArea name="options-response" label="Messages:" [hint]="messagePlaceholder()" [(ngModel)]="messages" [required]="isMessageRequired()" [errorMessage]="errors.messages" (valueChange)="onMessageChange($event)"></samTextArea>
 
   <!-- Cancel / Confirm -->
   <div>
     <p class="pull-right">
-      <a [routerLink]="['../access']"><button class="usa-button usa-button-outline">Cancel</button></a>
+      <button class="usa-button usa-button-outline" (click)="onCancelClick()">Cancel</button>
       &nbsp;
       <button id="grant-button" class="usa-button usa-button-primary" (click)="onGrantClick()">Submit</button>
     </p>
