--- a/src/styles/pages/_assistance-listing-operations.scss
+++ b/src/styles/pages/_assistance-listing-operations.scss
@@ -67,5 +67,8 @@
   .text-radio-padding {
     padding-left: 20px;
   }
+  .sam-autocomplete-width > .sam-autocomplete {
+    max-width: 46rem;
+  }
 }
 
