update placeholders, update buttons texts, remove debugging code

--- a/src/app/role-management/manage-request/manage-request.page.html
+++ b/src/app/role-management/manage-request/manage-request.page.html
@@ -58,7 +58,7 @@
         [required]="true"
         label="Message:"
         [errorMessage]="messageError"
-        [placeholder]="'Provide a reason for rejecting this request...'"
+        [placeholder]="messagePlaceholde()"
       ></samTextArea>
     </div>
     <div class="clearfix">
