--- a/src/styles/pages/_assistance-listing-operations.scss
+++ b/src/styles/pages/_assistance-listing-operations.scss
@@ -43,10 +43,10 @@
     padding: 12px 5px;
   }
 
-  .fal-label-margin {
-    margin-top: -1em;
-    margin-bottom: -1em;
-  }
+  /*  .fal-label-margin {
+      margin-top: -1em;
+      margin-bottom: -1em;
+    }*/
 
   .fal-obligations-label {
     font-weight: bold;
