--- a/src/app/role-management/manage-request/manage-request.page.html
+++ b/src/app/role-management/manage-request/manage-request.page.html
@@ -55,10 +55,11 @@
       <samTextArea
         name='message'
         [(value)]="message"
+        (valueChange)="onMessageChanged()"
         [required]="true"
-        label="Message:"
+        [label]="'Message:'"
         [errorMessage]="messageError"
-        [placeholder]="messagePlaceholde()"
+        [placeholder]="messagePlaceholder()"
       ></samTextArea>
     </div>
     <div class="clearfix">
